# open-rpc-diff

./: Cargo.toml
src/: main.rs
